Resize the main banner icons to stop grid shift for full screen view

--- a/styles.css
+++ b/styles.css
@@ -69,13 +69,13 @@ body {
 }
 
 .banner-ducati-icon {
-  height: 110px;
-  width: 110px;
+  height: 85px;
+  width: 85px;
 }
 
 .banner-triumph-icon {
-  height: 170px;
-  width: 170px;
+  height: 100px;
+  width: 100px;
 }
 
 .announcement {
@@ -88,7 +88,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  margin-bottom: 100px;
+  margin-bottom: 80px;
   height: 50vh;
   width: 30vw;
 }
